--- a/assets/highscore-style.css
+++ b/assets/highscore-style.css
@@ -2,4 +2,13 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    background-color: purple;
 }
+
+
+#header{
+    padding-top: 10rem;
+    display: flex;
+    justify-content: center;
+}
+
