--- a/assets/highscore-style.css
+++ b/assets/highscore-style.css
@@ -2,13 +2,38 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    background-color: purple;
 }
 
+a{
+    color: white;
+    text-decoration: none;
+}
+
+#button-placement {
+padding-top: 1rem;
+display: flex;
+justify-content: center;
+}
+
+.buttonstyle:hover{
+    opacity: 70%;
+}
+
+#highscores-list{
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+}
+
+.buttonstyle {
+    text-decoration: none;
+    background-color: purple;
+    border-radius: .5rem;
+    margin: 1rem;
+}
 
 #header{
     padding-top: 10rem;
     display: flex;
     justify-content: center;
 }
-
