--- a/assets/style.css
+++ b/assets/style.css
@@ -1,77 +1,78 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .buttonstyle {
-    text-decoration: none;
-    background-color: purple;
-    border-radius: .5rem;
-    color: white;
-    margin: 1rem;
+  text-decoration: none;
+  background-color: purple;
+  border-radius: 0.5rem;
+  color: white;
+  margin: 1rem;
 }
 
-.buttonstyle:hover{
-    opacity: 70%;
+.buttonstyle:hover {
+  opacity: 70%;
 }
 
-#highscore-nav{
-    text-decoration: none;
-    color: black;
-    
+#highscore-nav {
+  text-decoration: none;
+  color: black;
 }
 
-#navbar{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
-#header{
-    padding-top: 15rem;
-    display: flex;
-    justify-content: center;
+#header {
+  padding-top: 15rem;
+  display: flex;
+  justify-content: center;
 }
 
-#subtext, #button-placement{
-    padding-top: 1rem;
-    display: flex;
-    justify-content: center;
+#subtext,
+#button-placement {
+  padding-top: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
-#question-title{
-    display: flex;
-    justify-content: center;
-
+#question-title {
+  display: flex;
+  justify-content: center;
 }
 
-#button-master{
-    display: flex;
-    justify-content: center;
-    margin-top: 3rem;
-    flex-direction: row;
-    flex-wrap: wrap;
+#button-master {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-#check-box{
-    display: flex;
-    justify-content: center;
-    border-top: 2px solid purple;
+#check-box {
+  display: flex;
+  justify-content: center;
+  border-top: 2px solid purple;
 }
 
-#all-done, #final-score, #score-form{
-    display: flex;
-    justify-content: center;
-    padding-top: 1.5rem;
+#all-done,
+#final-score,
+#score-form {
+  display: flex;
+  justify-content: center;
+  padding-top: 1.5rem;
 }
 
-#highscores-list{
-    display: flex;
-    justify-content: center;
-    padding-top: 1rem;
+#highscores-list {
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
 }
 
-.hide{
-    display: none;
+.hide {
+  display: none;
 }
