--- a/assets/style.css
+++ b/assets/style.css
@@ -67,17 +67,13 @@
   padding-top: 1.5rem;
 }
 
-#highscores-list {
-  display: flex;
-  justify-content: center;
-  padding-top: 1rem;
-}
-
 .hide {
   display: none;
 }
 
 .list-style{
-    display: flex;
-    flex-flow: column;
+    display: grid;
+    justify-content: center;
+    padding-top: 1rem;
+
 }
